// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product renders correctly with highlighted set 1`] = `
.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.15rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #4dc16f;
  color: #fff;
}

.c10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10:hover {
  color: #fff;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.15rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #f5f6f7;
  color: #37474f;
  padding: 0.25rem 0.5rem;
  font-size: 90%;
}

.c11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:hover {
  color: #37474f;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c6 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c8 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c13 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c14 {
  list-style: none;
  margin-bottom: 0;
  margin-top: 1rem;
  padding: 0;
}

.c15 {
  font-size: 1.5rem;
  font-weight: 400;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.c16 svg {
  fill: #4dc16f;
  margin-right: 0.5rem;
}

.c12 {
  border-top: 2px solid #eceff1;
  padding: 1rem;
  display: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eceff1;
  padding: 0.5rem 0.75rem;
  background-color: #009688;
  color: #fff;
}

.c1 svg {
  width: 1.125rem;
  height: 1.125rem;
  margin-right: 0.25rem;
}

.c4 {
  border: 1px solid;
  border-radius: 1rem;
  font-size: 80%;
  padding: 0.2rem 0.75rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 div {
  margin: .5rem .5rem 0 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c5 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c5 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c5 small {
  font-size: 95%;
  font-weight: 300;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f5f6f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c7 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c7 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c7 small {
  font-size: 95%;
  font-weight: 300;
}

.c9 {
  margin-bottom: 0.5rem;
}

.c0 {
  background-color: white;
  border: 2px solid #eceff1;
  margin-bottom: 1.5rem;
  border-color: #009688;
}

@media (min-width:62em) {
  .c6 {
    -webkit-flex: 0 0 20%;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}

@media (min-width:62em) {
  .c8 {
    -webkit-flex: 0 0 15%;
    -ms-flex: 0 0 15%;
    flex: 0 0 15%;
    max-width: 15%;
  }
}

@media (min-width:62em) {
  .c13 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width:62em) {
  .c15 {
    padding-right: 1rem;
  }
}

@media (min-width:62em) {
  .c16 {
    margin-bottom: .5rem;
    padding-left: 1rem;
  }
}

@media (min-width:36em) {
  .c3 {
    margin-left: auto;
  }

  .c3 div {
    margin: 0 .5rem 0 0;
  }
}

<div
  class="c0"
  data-product="true"
>
  <div
    class="c1 c2"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root-1"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      >
        
      </path>
      <path
        d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
      >
        
      </path>
      <path
        d="M0 0h24v24H0z"
        fill="none"
      >
        
      </path>
    </svg>
    Landbay - Buy To Let Wizards
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        broker only
      </div>
      <div
        class="c4"
      >
        consumer favourite
      </div>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c5 c6"
    >
      <img
        alt="Landbay"
        src="https://b2bfinance.com/images/partners/Landbay.png"
      >
        
      </img>
    </div>
    <div
      class="c7 c8"
    >
      <small>
        Max LTV
      </small>
      <span>
        85%
      </span>
    </div>
    <div
      class="c5 c8"
    >
      <small>
        Initial Rate
      </small>
      <span>
        1.49%
      </span>
    </div>
    <div
      class="c7 c8"
    >
      <small>
        Subsequent Rate
      </small>
      <span>
        2.75%
      </span>
    </div>
    <div
      class="c5 c8"
    >
      <small>
        Fees
      </small>
      <span>
        £1,495
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <a
        class="c9 c10"
        href="https://b2bfinance.com/enquire/buy-to-let"
        rel="noopener"
        target="_blank"
      >
        Get Deal
      </a>
      <a
        class="c11"
      >
        more info
      </a>
    </div>
  </div>
  <div
    class="c12 c2"
  >
    <span>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum facilisis condimentum. Donec laoreet porttitor condimentum. Nulla luctus efficitur magna, eget rhoncus metus placerat sed.
    </span>
    <div
      class="c2"
    >
      <div
        class="c13"
      >
        <ul
          class="c14"
        >
          <li
            class="c15"
          >
            Online Application
          </li>
          <li
            class="c15"
          >
            Mobile app
          </li>
          <li
            class="c15"
          >
            Customer service winner
          </li>
        </ul>
      </div>
      <div
        class="c13"
      >
        <ul
          class="c14"
        >
          <li
            class="c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              >
                
              </path>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              >
                
              </path>
            </svg>
            1.5% Early Repayment
          </li>
          <li
            class="c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              >
                
              </path>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              >
                
              </path>
            </svg>
            6 months cool off peroid
          </li>
          <li
            class="c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              >
                
              </path>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              >
                
              </path>
            </svg>
            No monthly fee for existing customers
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product renders correctly with more information available  1`] = `
.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.15rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #4dc16f;
  color: #fff;
}

.c10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c10:hover {
  color: #fff;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.15rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #f5f6f7;
  color: #37474f;
  padding: 0.25rem 0.5rem;
  font-size: 90%;
}

.c11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:hover {
  color: #37474f;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c6 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c8 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c13 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c14 {
  list-style: none;
  margin-bottom: 0;
  margin-top: 1rem;
  padding: 0;
}

.c15 {
  font-size: 1.5rem;
  font-weight: 400;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.c16 svg {
  fill: #4dc16f;
  margin-right: 0.5rem;
}

.c12 {
  border-top: 2px solid #eceff1;
  padding: 1rem;
  display: none;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eceff1;
  padding: 0.5rem 0.75rem;
}

.c4 {
  border: 1px solid;
  border-radius: 1rem;
  font-size: 80%;
  padding: 0.2rem 0.75rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 div {
  margin: .5rem .5rem 0 0;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c5 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c5 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c5 small {
  font-size: 95%;
  font-weight: 300;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f5f6f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c7 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c7 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c7 small {
  font-size: 95%;
  font-weight: 300;
}

.c9 {
  margin-bottom: 0.5rem;
}

.c0 {
  background-color: white;
  border: 2px solid #eceff1;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c6 {
    -webkit-flex: 0 0 20%;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}

@media (min-width:62em) {
  .c8 {
    -webkit-flex: 0 0 15%;
    -ms-flex: 0 0 15%;
    flex: 0 0 15%;
    max-width: 15%;
  }
}

@media (min-width:62em) {
  .c13 {
    -webkit-flex: 0 0 50%;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width:62em) {
  .c15 {
    padding-right: 1rem;
  }
}

@media (min-width:62em) {
  .c16 {
    margin-bottom: .5rem;
    padding-left: 1rem;
  }
}

@media (min-width:36em) {
  .c3 {
    margin-left: auto;
  }

  .c3 div {
    margin: 0 .5rem 0 0;
  }
}

<div
  class="c0"
  data-product="true"
>
  <div
    class="c1 c2"
  >
    Precise Oh So Precise Total Winners Deal
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        broker only
      </div>
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c5 c6"
    >
      <img
        alt="Barclays"
        src="https://b2bfinance.com/images/partners/Precise.png"
      >
        
      </img>
    </div>
    <div
      class="c7 c8"
    >
      <small>
        Max LTV
      </small>
      <span>
        80%
      </span>
    </div>
    <div
      class="c5 c8"
    >
      <small>
        Initial Rate
      </small>
      <span>
        1.75%
      </span>
    </div>
    <div
      class="c7 c8"
    >
      <small>
        Subsequent Rate
      </small>
      <span>
        3%
      </span>
    </div>
    <div
      class="c5 c8"
    >
      <small>
        Fees
      </small>
      <span>
        £995
      </span>
    </div>
    <div
      class="c5 c6"
    >
      <a
        class="c9 c10"
        href="https://b2bfinance.com/enquire/buy-to-let"
        rel="noopener"
        target="_blank"
      >
        Get Deal
      </a>
      <a
        class="c11"
      >
        more info
      </a>
    </div>
  </div>
  <div
    class="c12 c2"
  >
    <span>
      Whether your landlord is a first time buyer, a first time landlord or has a large portfolio, we have a range of products to help. Our range of mortgages also includes products for Limited Companies and HMOs.
    </span>
    <div
      class="c2"
    >
      <div
        class="c13"
      >
        <ul
          class="c14"
        >
          <li
            class="c15"
          >
            Complete online application
          </li>
          <li
            class="c15"
          >
            Mobile app
          </li>
          <li
            class="c15"
          >
            Customer service winner
          </li>
        </ul>
      </div>
      <div
        class="c13"
      >
        <ul
          class="c14"
        >
          <li
            class="c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              >
                
              </path>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              >
                
              </path>
            </svg>
            Rental cover - ICR: based on individual circumstances
          </li>
          <li
            class="c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              >
                
              </path>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              >
                
              </path>
            </svg>
            5 year fixed rate products that help maximise the loan size available
          </li>
          <li
            class="c16"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              >
                
              </path>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              >
                
              </path>
            </svg>
            5 year fixed with 4% cashback available on purchases
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product renders correctly without more information available  1`] = `
.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.15rem;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto,sans-serif;
  font-weight: 400;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #4dc16f;
  color: #fff;
}

.c8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  color: #fff;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.c5 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c7 {
  width: 100%;
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #eceff1;
  padding: 0.5rem 0.75rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 div {
  margin: .5rem .5rem 0 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c4 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c4 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c4 small {
  font-size: 95%;
  font-weight: 300;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f5f6f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem 1.25rem;
  text-align: center;
}

.c6 img {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 100%;
  max-height: 120px;
}

.c6 span {
  font-size: 1.25rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
  line-height: 1.1;
}

.c6 small {
  font-size: 95%;
  font-weight: 300;
}

.c0 {
  background-color: white;
  border: 2px solid #eceff1;
  margin-bottom: 1.5rem;
}

@media (min-width:62em) {
  .c5 {
    -webkit-flex: 0 0 20%;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}

@media (min-width:62em) {
  .c7 {
    -webkit-flex: 0 0 15%;
    -ms-flex: 0 0 15%;
    flex: 0 0 15%;
    max-width: 15%;
  }
}

@media (min-width:36em) {
  .c3 {
    margin-left: auto;
  }

  .c3 div {
    margin: 0 .5rem 0 0;
  }
}

<div
  class="c0"
  data-product="true"
>
  <div
    class="c1 c2"
  >
    Natwest Low Low Rate
    <div
      class="c3"
    >
      
    </div>
  </div>
  <div
    class="c2"
  >
    <div
      class="c4 c5"
    >
      <img
        alt="Natwest"
        src="https://b2bfinance.com/images/partners/NatWest.png"
      >
        
      </img>
    </div>
    <div
      class="c6 c7"
    >
      <small>
        Max LTV
      </small>
      <span>
        85%
      </span>
    </div>
    <div
      class="c4 c7"
    >
      <small>
        Initial Rate
      </small>
      <span>
        1.52%
      </span>
    </div>
    <div
      class="c6 c7"
    >
      <small>
        Subsequent Rate
      </small>
      <span>
        3.25%
      </span>
    </div>
    <div
      class="c4 c7"
    >
      <small>
        Fees
      </small>
      <span>
        £995
      </span>
    </div>
    <div
      class="c4 c5"
    >
      <a
        class="c8"
        href="https://b2bfinance.com/enquire/buy-to-let"
        rel="noopener"
        target="_blank"
      >
        Get Deal
      </a>
    </div>
  </div>
</div>
`;

exports[`Wrapper render correctly without highlight 1`] = `
.c0 {
  background-color: white;
  border: 2px solid #eceff1;
  margin-bottom: 1.5rem;
}

<div
  class="c0"
>
  
</div>
`;

exports[`Wrapper renders correctly with highlight 1`] = `
.c0 {
  background-color: white;
  border: 2px solid #eceff1;
  margin-bottom: 1.5rem;
  border-color: #009688;
}

<div
  class="c0"
>
  
</div>
`;
